<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="CVaccNotEligible"
            type="com.example.cvacc.NotEligibleFragment" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NotEligibleFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/appt_fail_img"
                    android:layout_width="140dp"
                    android:layout_height="137dp"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    app:srcCompat="@drawable/ic_noappointment"
                    android:contentDescription="@string/blank_text" />

                <TextView
                    android:id="@+id/appt_fail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/appt_fail_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/gray_100"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/appt_fail_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/appt_fail_desc"
                    android:textSize="18sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/appt_fail_back_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="32dp"
                        android:padding="16dp"
                        android:text="@string/appt_fail_back_btn"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/blue_500"
                        app:cornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/scrollView2" />

                    <ScrollView
                        android:id="@+id/scrollView2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="8dp"
                        android:clipToPadding="true"
                        android:fillViewport="false"
                        app:layout_constraintBottom_toTopOf="@id/appt_fail_back_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:id="@+id/appt_fail_linearlayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        </LinearLayout>
                    </ScrollView>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>